<?xml version="1.0"?>
<package format="2">
	<name>rpg_odroid_io</name>
	<version>0.0.0</version>
	<description>The GPIO package for odroids</description>
	
	<maintainer email="todo@todo.com">todo</maintainer>
	<license>GNU GPL</license>
	
	<buildtool_depend>catkin</buildtool_depend>
	<buildtool_depend>catkin_simple</buildtool_depend>

    <depend>roscpp</depend>
</package>
