<?xml version="1.0"?>
<package format="2">
	<name>rpg_single_board_io</name>
	<version>0.0.0</version>
	<description>A package for using ADCs and GPIOs on single board computers</description>
	
	<maintainer email="todo@todo.com">todo</maintainer>
	<license>GNU GPL</license>
	
	<buildtool_depend>catkin</buildtool_depend>
	<buildtool_depend>catkin_simple</buildtool_depend>

    <depend>roscpp</depend>
    <depend>std_msgs</depend>
    
</package>
